modification du lien

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
    <div class="ex">oding recepe</div>
    <div class="ex2">oding recepe</div>
    <ul>
-   <li><a href="C:\Users\Admin\Documents\oding-recipes\recipes\eru.html"> eru camerounais </a></li>
-   <li><a href="C:\Users\Admin\Documents\oding-recipes\recipes\eru.html"> okok camerounais </a></li>
-   <li><a href="C:\Users\Admin\Documents\oding-recipes\recipes\eru.html"> Ndolè camerounais </a></li>
+   <li><a href="recipes\eru.html"> eru camerounais </a></li>
+   <li><a href="recipes\eru.html"> okok camerounais </a></li>
+   <li><a href="recipes\eru.html"> Ndolè camerounais </a></li>
 </ul>
 </body>
 </html>
