ajout d'un autre design css le background et couleur

--- a/recipes/eru.html
+++ b/recipes/eru.html
@@ -2,28 +2,27 @@
 <html>
 <head>
    <title> oding-recipes</title>
-   <link rel="stylesheet" type="text/css" href="styles.css">
+   <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-   <h1> eru cmerounais</h1>
+   <h1> <mark>ERU camerounais</mark> </h1>
       <!-- a href="https://www.theodinproject.com/about">plats officiels -->
    <h2><p><em>ERU ET PREPARATION</em></p></h2>
-        <p>Bonjour. Souhaitez-vous consulter la liste de nos plats <a href="page2.html">plats</a> ?</p>
+        <p>Bonjour. Souhaitez-vous consulter la liste de nos plats  ?</p>
         <ul>
             <p>ENVIE D'un plat de Eru?
                 veuillez passer votre commande
                  :<br />
                  <figure>
                 <img src="eru.jpg" alt="" /> <img src="eru1.jpg" alt="" /> 
-                <figcaption> Le eru est un plat camerounais à base de légumes, d'okok et de water leaf originaire <br/>
-                     du peuple Banyang de la région du Sud-Ouest du Cameroun. La recette de base contient <br/> 
-                     des écrevisses, du poisson fumé et de la peau de bœuf. L'ensemble des ingrédients<br/> 
-                     est souvent difficile à trouver, hors du pays.plat a partir de 1000FCFA</figcaption>
+                <figcaption>plat camerounais à base de légumes, d'okok et de water leaf originaire <br/>
+                      La recette de base contient des écrevisses, du poisson fumé et de la peau de bœuf. <br/> 
+                      .plat a partir de 1000FCFA</figcaption>
                  </figure>
             </p> <a href=""></a>
         </ul>
 
-        <h1> ETAPES DE PREPARATION </h1>
+        <h2> ETAPES DE PREPARATION </h2>
 
         Faites cuire votre viande jusqu’à ce qu’elle soit tendre
 
@@ -39,10 +38,10 @@ Servez chaud !<br/>
 
 Accompagnez avec du water fufu.<br/> 
 
-<h1> okok cmerounais</h1>
+<h1> <mark> okok camerounais</mark></h1>
       <!-- a href="https://www.theodinproject.com/about">plats officiels -->
    <h2><p><em>okoK ingredient et preparation</em></p></h2>
-        <p>Bonjour. Souhaitez-vous consulter la liste de nos plats <a href="page2.html">nos plats</a> ?</p>
+        <p>Bonjour. Souhaitez-vous consulter la liste de nos plats  ?</p>
         <ul>
             <p>ENVIE D'un plat de Okok?
                 veuillez passer votre commande
@@ -56,7 +55,7 @@ Accompagnez avec du water fufu.<br/>
             </p> <a href=""></a>
         </ul>
 
-        <h1> ETAPES DE PREPARATION du OKOK </h1>
+        <h2> ETAPES DE PREPARATION du OKOK </h2>
 
         Etape 1 : Dans une casserole, faire cuire les noix de palme et l'Okok (emballé dans le plastique).<br/>
 
@@ -76,10 +75,10 @@ Accompagnez avec du water fufu.<br/>
         
         Etape 9 : Votre Okok est prêt.<br/> 
 
-        <h1> Ndolè camerounais</h1>
+        <h1> <mark> Ndolè camerounais</mark></h1>
         <!-- a href="https://www.theodinproject.com/about">plats officiels -->
      <h2><p><em>Ndolè ingredient et preparation</em></p></h2>
-          <p>Bonjour. Souhaitez-vous consulter la liste de nos plats <a href="page2.html">nos plats</a> ?</p>
+          <p>Bonjour. Souhaitez-vous consulter la liste de nos plats  ?</p>
           <ul>
               <p>ENVIE D'un plat de Ndolè ?
                   veuillez passer votre commande
@@ -87,19 +86,19 @@ Accompagnez avec du water fufu.<br/>
                    <figure>
                      <img src="Ndolè2.jpg" alt="" /> 
                   <figcaption> Bon Ndolè1
-                    1kg de viande et/ ou de poisson fumé,½ l d’huile, 4 d’oignons, <BR/>
-                    300g de pâte d’arachide,2kg de feuille de ndole,150g de crevettes séchées,<br/>
-                    3 gousses d’ail,piment rouge,cubes Maggi,sel, <br/>
+                    1kg de viande,½ l d’huile, 4 d’oignons, 300g de pâte d’arachide,2kg de feuille de n,<BR/>
+                    dole150g de crevettes séchées,3 gousses d’ail,piment rouge,cubes Maggi,sel,<br/>
+                     <br/>
                       plat a partir de 1000FCFA</figcaption>
                    </figure>
               </p> <a href=""></a>
           </ul>
-    <h1>ETAPES DE PREPARATION DU NDOLE  </h1>
+    <h2>ETAPES DE PREPARATION DU NDOLE  </h2>
     Mettre l’eau salée à bouillir, découper et laver les feuilles de ndole.
 
 Les mettre dans de l’eau bouillante et les cuire rapidement à découvert pendant 45mn environ avec un morceau de sel gemme.<BR/>
 
-Rincer et égoutter dans une passoire.<BR/>
+Rincer et égoutter dans une passoire.<br/>
 
 Presser les feuilles pour enlever de l’eau, les mettre sur une assiette formant des boules avec les feuilles.<BR/>
 
@@ -107,15 +106,15 @@ Dans une casserole, mettez les arachides (crues) avec de l’eau et laissez cuir
 
 Faire chauffer de l’huile et saisir les morceaux de viande avec des oignons finement coupés.<BR/>
 
-Mélanger pendant quelques minutes et remuer jusqu’à coloration.<BR/>
+Mélanger pendant quelques minutes et remuer jusqu’à coloration.<br/>
 
 Ensuite, ajouter l’ail, le piment, l’oignon, les crevettes écrasées puis la pâte d’arachide. Mouiller de ½ litre d’eau et cuire la viande pendant 1h30mn environ.<BR/>
 
-Cuire à feux doux pendant 15mn.<BR/>
+Cuire à feux doux pendant 15mn.<br/>
 
-Ajouter alors le ndolé délicatement en pluie dans la marmite.<BR/>
+Ajouter alors le ndolé délicatement en pluie dans la marmite.<br/>
 
-Dès que le ndolé est bien dilué dans la sauce, ajoutez de l’eau.<BR/>
+Dès que le ndolé est bien dilué dans la sauce, ajoutez de l’eau.<br/>
 </body>
 
 </html>
