--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   <h1>oding recepe</h1>
+   <h1>Accueil</h1>
    <div class="ex">oding recepe</div>
    <div class="ex2">oding recepe</div>
+
+   <div class="main"> oooding </div>
+   <div class="list" id="subsection">oding recepe</div>
    <ul>
-   <li><a href="recipes\eru.html"> eru camerounais </a></li>
-   <li><a href="recipes\eru.html"> okok camerounais </a></li>
-   <li><a href="recipes\eru.html"> Ndolè camerounais </a></li>
+   <li><a href="recipes/eru.html"> eru camerounais </a></li>
+   <li><a href="recipes/eru.html"> okok camerounais </a></li>
+   <li><a href="recipes/eru.html"> Ndolè camerounais </a></li>
 </ul>
 </body>
 </html>
